# AC6-SaveManager

./: README.md  components.json  index.html  notes.md  package-lock.json  package.json  postcss.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.module.css  App.tsx  main.tsx  styles.css  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: PathView.tsx
src/components/app-buttons/: ButtonBar.module.css  ButtonBar.tsx  DeleteArchiveBtn.tsx  EditConfigBtn.tsx  LaunchGameBtn.tsx  LoadArchiveBtn.tsx  NewArchiveBtn.tsx  OpenArchiveBtn.tsx
src/components/app-header/: header.module.css  header.tsx
src/components/archive/: ArchiveComponent.module.css  ArchiveComponent.tsx
src/components/archive/window/: ArchiveViewer.module.css  ArchiveViewer.tsx
src/components/modals/: modalStyles.module.css
src/components/save/: SaveViewer.module.css  SaveViewer.tsx
src/components/ui/: accordion.tsx  breadcrumb.tsx  button.tsx  input.tsx  scroll-area.tsx  toast.tsx  toaster.tsx  use-toast.ts
src/context/: ArchiveContext.tsx  ModalContext.tsx  SelectedContext.tsx  SettingsContext.tsx
src/context/modal-context/: NewArchiveContext.tsx  NewSaveContext.tsx  SettingsModalContext.tsx
src/data/: AppConfig.ts
src/data/archive/: archive.ts  archive_manager.ts  folder_archive.ts
src/data/constants/: constant.ts
src/data/save-data/: SaveDataFile.ts  SaveDataFileMetadata.ts  save.tsx
src/data/util/: results.ts  services.tsx
(+15 files in other folders)
